--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      // The language is set to the same as video.js by default
      videojs.setGlobalOptions({
        youtube: {
-
+         showinfo=0,
          rel: 1,
          autohide: 2
        }
