--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
        youtube: {
          showinfo: 1,
          rel: 1,
-         autohide: 2
+         autohide: 2,
+         modestbranding: 1
+
        }
      });
      </script>
