--- a/plr.html
+++ b/plr.html
@@ -13,12 +13,9 @@
 
 
     <div class="plyr__video-embed" id="player">
-    <iframe
-      src="https://www.youtube.com/embed/bTqVqk7FSmY?modestbranding=1&playsinline=1&ashowinfo=0&rel=1&enablejsapi=1"
-      allowfullscreen
-      allowtransparency
-      allow="autoplay"
-    ></iframe>
+    <iframe src="https://www.youtube.com/embed/9cCbPSciTus&modestbranding=1&rel=0"
+                allowtransparency>
+                </iframe>
   </div>
 
   </body>
