--- a/plr.html
+++ b/plr.html
@@ -12,7 +12,7 @@
 
 
 
-    <div class="plyr__video-embed" id="player">
+    <div class="plyr__video-embed z-depth-1" id="player" style="--plyr-color-main: #F44336; border-radius:10px; ">
     <iframe src="https://www.youtube.com/embed/9cCbPSciTus&modestbranding=1&rel=0"
                 allowtransparency>
                 </iframe>
