--- a/plr.html
+++ b/plr.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Plr</title>
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="path/to/plyr.css" />
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
 
