--- a/plr.html
+++ b/plr.html
@@ -30,7 +30,7 @@ https://www.ypacademyclasses.in/YPAAdminstation3110/ypaapp3110/css/plyr.css
                     });
         
       player.on('ready', event => {
-          //$('.plyr__control[data-plyr="fullscreen"]').hide();
+          $('.plyr__control[data-plyr="fullscreen"]').hide();
           //$('.plyr__control[data-plyr="settings"]').hide();
           //$('.plyr__controls__item[data-plyr="volume"]').hide();
           //$('.plyr__volume').hide();
