--- a/plr.html
+++ b/plr.html
@@ -5,8 +5,8 @@
     <title>Plr</title>
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-https://www.ypacademyclasses.in/YPAAdminstation3110/ypaapp3110/css/plyr.css
 
+  <link rel="stylesheet" href="https://www.ypacademyclasses.in/YPAAdminstation3110/ypaapp3110/css/plyr.css"/>
   </head>
 
   <body>
