--- a/plr.html
+++ b/plr.html
@@ -6,7 +6,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="https://www.ypacademyclasses.in/YPAAdminstation3110/ypaapp3110/css/plyr.css"/>
+  <link rel="stylesheet" href="./plyr.css"/>
   </head>
 
   <body>
@@ -20,8 +20,7 @@
   </div>
 
   </body>
-  <script src="path/to/plyr.js"></script>
-  <script src="https://cdn.plyr.io/3.6.8/plyr.js"></script>
+
 
   <script>
      const player = new Plyr('#player', {
@@ -50,5 +49,6 @@
 	   
 	});
   </script>
+  <script src="plyr.min.js"></script>
   
 </html>
