--- a/plr.html
+++ b/plr.html
@@ -20,8 +20,9 @@
   </div>
 
   </body>
-
-
+  <script src="plyr.min.js"></script>
+    <script src="mdb.min.js"></script>
+  <script src="https://cdn.plyr.io/3.6.8/plyr.js"></script>
   <script>
      const player = new Plyr('#player', {
                       title: 'Video',
@@ -49,7 +50,6 @@
 	   
 	});
   </script>
-  <script src="plyr.min.js"></script>
-    <script src="mdb.min.js"></script>
+
   
 </html>
