--- a/index.html
+++ b/index.html
@@ -11,40 +11,25 @@
   </head>
   <body>
 
-
-      <video
-    id="vid2"
+<video
+    id="my-player"
+    class="video-js"
     controls
-
-    class="video-js vjs-theme-forest"
-    width="640" height="264"
-    data-setup='{ "techOrder": ["youtube"], "sources": [{ "type": "video/youtube", "src": "https://www.youtube.com/watch?v=xjS6SftYQaQ"}] }'
-  >
-  </video>
-  <video    controls
-
-      id="vid1"
-      class="video-js vjs-default-skin"
-      width="640" height="264"
-      data-setup='{ "techOrder": ["youtube"], "sources": [{ "type": "video/youtube", "src": "https://www.youtube.com/watch?v=xjS6SftYQaQ"}] }'
-    >
-    </video>
-    <script>
-     // You can use any YouTube player parameters
-     // https://developers.google.com/youtube/player_parameters?playerVersion=HTML5#Parameters
-     // To use YouTube controls, you must use ytControls instead
-     // To use the loop or autoplay, use the video.js settings
-     // The language is set to the same as video.js by default
-     videojs.setGlobalOptions({
-       youtube: {
-         showinfo: 1,
-         rel: 1,
-         autohide: 2,
-         modestbranding: 1
-
-       }
-     });
-     </script>
+    preload="auto"
+    poster="//vjs.zencdn.net/v/oceans.png"
+    data-setup='{}'>
+  <source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4"></source>
+  <source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>
+  <source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source>
+  <p class="vjs-no-js">
+    To view this video please enable JavaScript, and consider upgrading to a
+    web browser that
+    <a href="https://videojs.com/html5-video-support/" target="_blank">
+      supports HTML5 video
+    </a>
+  </p>
+</video>
+      
       <script src="https://vjs.zencdn.net/7.14.3/video.min.js"></script>
 
       <script src="dist/Youtube.min.js"></script>
