--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
 
-      <iframe allow="camera; microphone; fullscreen; display-capture; autoplay" src="https://meet.jit.si/salman8855" style="height: 100%; width: 100%; border: 0px;"></iframe>
+      <iframe class="video-js" allow="camera; microphone; fullscreen; display-capture; autoplay" src="https://meet.jit.si/salman8855" style="height: 100%; width: 100%; border: 0px;"></iframe>
       <script src="https://vjs.zencdn.net/7.14.3/video.min.js"></script>
 
       <script src="dist/Youtube.min.js"></script>
