--- a/plr.html
+++ b/plr.html
@@ -14,9 +14,7 @@
 
 
     <div class="plyr__video-embed z-depth-1" id="player" style="--plyr-color-main: #F44336; border-radius:10px; ">
-    <iframe src="https://www.youtube.com/embed/Id9GZ29rBmE?modestbranding=1&rel=1"
-                allowtransparency>
-                </iframe>
+    <iframe allow="camera; microphone; fullscreen; display-capture; autoplay" src="https://meet.jit.si/salman8855" style="height: 100%; width: 100%; border: 0px;"></iframe>
   </div>
 
   </body>
