--- a/plr.html
+++ b/plr.html
@@ -14,8 +14,12 @@
 
 
     <div class="plyr__video-embed z-depth-1" id="player" style="--plyr-color-main: #F44336; border-radius:10px; ">
-    <iframe allow="camera; microphone; fullscreen; display-capture; autoplay" src="https://meet.jit.si/salman8855" style="height: 100%; width: 100%; border: 0px;"></iframe>
-  </div>
+ <iframe
+    src="https://www.youtube.com/watch?v=txL_IXqyFEE?modestbranding=1&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1"
+    allowfullscreen
+    allowtransparency
+    allow="autoplay"
+  ></iframe>  </div>
 
   </body>
   <script src="plyr.min.js"></script>
